curabox/force-app/main/default/objects/Follow_up_Task__c/Follow_up_Task__c.object-meta.xml
<CustomObject>
<!--     <gender>Feminine</gender> -->
    <label>Follow-up Task</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow-up Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>