curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LeadKonvertierung</fullName>
            </value>
            <value>
                <fullName>Versand Formular an Interessent</fullName>
            </value>
            <value>
                <fullName>KV an Krankenkasse übermittelt</fullName>
            </value>
            <value>
                <fullName>Brief erstellen</fullName>
            </value>
            <value>
                <fullName>Auftrag pausieren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>