curabox/force-app/main/default/objects/Follow_up_Task__c/fields/CurrentEditor__c.field-meta.xml
<CustomField>
    <fullName>CurrentEditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bearbeiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Follow_up_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>