curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Beschreibung</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>