curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Fälligkeitsdatum</label>
    <type>DateTime</type>
</CustomField>