curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <description>Um bei Berichten die Uhrzeit anzeigen zu lassen.</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zuletzt geändert am</label>
    <type>DateTime</type>
</CustomField>