curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Follow-up Tasks</relationshipLabel>
    <relationshipName>Follow_up_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>