curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inhaber</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Follow_up_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>