curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offen</fullName>
                <default>true</default>
                <label>Offen</label>
            </value>
            <value>
                <fullName>In Bearbeitung</fullName>
            </value>
            <value>
                <fullName>Geschlossen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>