curabox/force-app/main/default/objects/Follow_up_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Thema</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lieferung angehalten</fullName>
            </value>
            <value>
                <fullName>Antrag unvollständig</fullName>
            </value>
            <value>
                <fullName>Kündigung einstellen</fullName>
            </value>
            <value>
                <fullName>Rückruf</fullName>
            </value>
            <value>
                <fullName>Bedarfsmeldung</fullName>
            </value>
            <value>
                <fullName>Klaerung AOK Rheinland/HH</fullName>
            </value>
            <value>
                <fullName>Nachfassen bei PK wg. offener KÜ</fullName>
            </value>
            <value>
                <fullName>Adressänderung einstellen</fullName>
            </value>
            <value>
                <fullName>Storno</fullName>
            </value>
            <value>
                <fullName>Storno - Rückruf</fullName>
            </value>
            <value>
                <fullName>Storno- Rückmeldung</fullName>
            </value>
            <value>
                <fullName>Wohin soll cb geliefert werden?</fullName>
            </value>
            <value>
                <fullName>Ablehnung</fullName>
            </value>
            <value>
                <fullName>PG51 genehmigt</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
            <value>
                <fullName>Nachlieferung</fullName>
            </value>
            <value>
                <fullName>Genehmigung PG54 läuft aus</fullName>
            </value>
            <value>
                <fullName>Genehmigung PG51 läuft aus</fullName>
            </value>
            <value>
                <fullName>DPD Rückläufer</fullName>
            </value>
            <value>
                <fullName>DPD- Zustellhindernisse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>