curabox/force-app/main/default/objects/Follow_up_Task__c/validationRules/Contact_required_FUT.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_required_FUT</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Contact__c )</errorConditionFormula>
    <errorMessage>Bitte den Kontakt eintragen.</errorMessage>
</ValidationRule>