curabox/force-app/main/default/objects/Follow_up_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>Ablehnung</value>
    </filters>
    <label>All</label>
</ListView>